--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "prettier": "^3.4.1"
   },
   "dependencies": {
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "parser": "^0.1.4"
   }
 }
