--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
     "parser": "^0.1.4"
   }
 }
